--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -70,22 +70,22 @@
     "### Formulas\n",
     "The equation for calculating the total CO<sub>2</sub> from paper filings:\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "paperCO_2 =  (number\\ of\\ returns\\ in\\ the\\ year) * (\\%paper\\ filing) * (CO_2\\ per\\ mailed\\ letter) \n",
-    "\\end{equation*}  \n",
+    "\\end{equation}  \n",
     "\n",
     "The equation for calculating the total CO<sub>2</sub> from e-filings included the assumption for the different time taken to prepare business and non-business tax returns: \n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "efileCO_230 = (number\\ of\\ returns\\ in\\ this\\ year) * (\\%efile\\ filing) * (30\\%) * (9\\ hrs\\ to\\ prepare\\ return) * (laptop\\ watts) * (CO_2\\ conversion)  \n",
-    "\\end{equation*} \n",
+    "\\end{equation} \n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "efileCO_270 = (number\\ of\\ returns\\ in\\ this\\ year) * (\\%efile\\ filing) * (70\\%) * (22\\ hrs\\ to\\ prepare\\ return) * (laptop\\ watts) * (CO_2\\ conversion)  \n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "efileCO_2 = efileCO_230 + efileCO_270  \n",
-    "\\end{equation*}\n"
+    "\\end{equation}\n"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "metadata": {},
    "source": [
     "### Carbon Calcs\n",
-    "Using the assumptions and formulas, the follow cells caculate "
+    "Using the assumptions and formulas, the follow cells calculate the yearly totals."
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +134,6 @@
     }
    ],
    "source": [
-    "#years = [datetime.datetime.strptime(str(year), '%Y') for year in years] \n",
     "d = {\n",
     "    \"eFile_CO2\": {year:0 for year in years} \n",
     "    ,\"eFile_CO2_percentage\": {year:0 for year in years} \n",
@@ -159,6 +158,59 @@
     "    \n",
     "    print(str(year.year)+\":\", \"eFile_CO2 < paper_CO2 ==\", e<paperCO2)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Show Totals\n",
+    "The first cell shows the values as packed into the data object. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eFile_CO2': {datetime.datetime(1990, 12, 31, 0, 0): 5019319.816012321,\n",
+      "               datetime.datetime(2000, 12, 31, 0, 0): 42827777.5653,\n",
+      "               datetime.datetime(2010, 12, 31, 0, 0): 110031339.7638,\n",
+      "               datetime.datetime(2016, 12, 31, 0, 0): 151494405.7536,\n",
+      "               datetime.datetime(2025, 12, 31, 0, 0): 252726973.1273196},\n",
+      " 'eFile_CO2_percentage': {datetime.datetime(1990, 12, 31, 0, 0): 0.96,\n",
+      "                          datetime.datetime(2000, 12, 31, 0, 0): 0.7,\n",
+      "                          datetime.datetime(2010, 12, 31, 0, 0): 0.30000000000000004,\n",
+      "                          datetime.datetime(2016, 12, 31, 0, 0): 0.09999999999999998,\n",
+      "                          datetime.datetime(2025, 12, 31, 0, 0): 0.0010000000000000009},\n",
+      " 'paperFile_CO2': {datetime.datetime(1990, 12, 31, 0, 0): 4061066432.256,\n",
+      "                   datetime.datetime(2000, 12, 31, 0, 0): 3368885940.0000005,\n",
+      "                   datetime.datetime(2010, 12, 31, 0, 0): 1589730840.0000005,\n",
+      "                   datetime.datetime(2016, 12, 31, 0, 0): 567463679.9999999,\n",
+      "                   datetime.datetime(2025, 12, 31, 0, 0): 8528449.680000007},\n",
+      " 'paperFile_CO2_percentage': {datetime.datetime(1990, 12, 31, 0, 0): 0.04,\n",
+      "                              datetime.datetime(2000, 12, 31, 0, 0): 0.3,\n",
+      "                              datetime.datetime(2010, 12, 31, 0, 0): 0.7,\n",
+      "                              datetime.datetime(2016, 12, 31, 0, 0): 0.9,\n",
+      "                              datetime.datetime(2025, 12, 31, 0, 0): 0.999}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pprint(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next cell shows a table of the totals. "
    ]
   },
   {
@@ -249,6 +301,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final cell shows a bar plot of the results. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -281,13 +340,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...the end"
+   ]
   }
  ],
  "metadata": {
