--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -75,16 +75,17 @@
     "\\end{equation}  \n",
     "\n",
     "The equation for calculating the total CO<sub>2</sub> from e-filings included the assumption for the different time taken to prepare business and non-business tax returns: \n",
+    "\n",
     "\\begin{equation}\n",
-    "efileCO_230 = (number\\ of\\ returns\\ in\\ this\\ year) * (\\%efile\\ filing) * (30\\%) * (9\\ hrs\\ to\\ prepare\\ return) * (laptop\\ watts) * (CO_2\\ conversion)  \n",
+    "efile30CO_2 = (number\\ of\\ returns\\ in\\ this\\ year) * (\\%efile\\ filing) * (30\\%) * (9\\ hrs\\ to\\ prepare\\ return) * (laptop\\ watts) * (CO_2\\ conversion)  \n",
     "\\end{equation} \n",
     "\n",
     "\\begin{equation}\n",
-    "efileCO_270 = (number\\ of\\ returns\\ in\\ this\\ year) * (\\%efile\\ filing) * (70\\%) * (22\\ hrs\\ to\\ prepare\\ return) * (laptop\\ watts) * (CO_2\\ conversion)  \n",
+    "efile70CO_2 = (number\\ of\\ returns\\ in\\ this\\ year) * (\\%efile\\ filing) * (70\\%) * (22\\ hrs\\ to\\ prepare\\ return) * (laptop\\ watts) * (CO_2\\ conversion)  \n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "efileCO_2 = efileCO_230 + efileCO_270  \n",
+    "efileCO_2 = efile30CO_2 + efile70CO_2  \n",
     "\\end{equation}\n"
    ]
   },
