--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -20,7 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### History \n",
+    "## History \n",
+    "\n",
+    "#### Facts:\n",
     "The facts below are related to tech, e-filing, and the environment.\n",
     "\n",
     "1. In 1981, the first laptop was publically available for purchase, which weighed over 20lbs and had a 5 inch screen. [source](https://en.wikipedia.org/wiki/Laptop)\n",
@@ -55,27 +57,30 @@
     "    * 2016: 90% total returns e-file\n",
     "    * 2025: 99.9%\n",
     "  \n",
-    "### Energy\n",
-    "The information below lays out the assumptions used to build an approximation for how much CO<sub>2</sub> is used to paper file versus efile. \n",
+    "## Energy\n",
     "\n",
-    "Assumptions:\n",
-    "* The International Post Corporation reported in their [2016 sustainability report](https://www.ipc.be/en/knowledge-centre/sustainability/sustainability-report) that mailing 1 letter in 2015 required 37.2g of CO<sub>2</sub>. We use this number as the lower bound for the carbon used to paper file taxes. For all years not present, the 37.2g of CO<sub>2</sub> is assumed to be the \n",
+    "\n",
+    "#### Assumptions:\n",
+    "The information below lays out the assumptions used to build an approximation for how much CO<sub>2</sub> is used to paper file versus efile. \n",
+    "* The International Post Corporation reported in their [2016 sustainability report](https://www.ipc.be/en/knowledge-centre/sustainability/sustainability-report) that mailing 1 letter in 2015 required 37.2g of CO<sub>2</sub>. We use this number as the lower bound for the carbon used to paper file taxes.   \n",
     "    \n",
-    "* The total number of hours it takes to file a tax return is assumed to be 9 hours for 70% of returns and 22 hours for the remaining 30% [source](https://www.irs.gov/instructions/i1040a/ar03.html)\n",
-    "* On average, electricity sources emit 1.222lbs CO2 per kWh (0.0005925 metric tons CO2 per kWh) [source](https://carbonfund.org/how-we-calculate/), which is assumed to be constant across all years.\n",
-    "* Laptops are assumed to require 70 watts the following instantaneous watts [source1](https://support.apple.com/en-us/HT201700) [source2](https://support.apple.com/en-us/HT201796)\n",
+    "* The total number of hours it takes to file a tax return is assumed to be 9 hours for 70% of returns and 22 hours for the remaining 30% [source](https://www.irs.gov/instructions/i1040a/ar03.html)  \n",
+    "\n",
+    "* On average, electricity sources emit 1.222lbs CO2 per kWh (0.0005925 metric tons CO2 per kWh) [source](https://carbonfund.org/how-we-calculate/), which is assumed to be constant across all years.  \n",
+    "\n",
+    "* Laptops are assumed to require 70 watts the following instantaneous watts [source1](https://support.apple.com/en-us/HT201700) [source2](https://support.apple.com/en-us/HT201796)  \n",
     "    \n",
     "* Laptops are assumed to be responsible for all e-filing. [NO SOURCE]\n",
     "\n",
     "\n",
-    "### Formulas\n",
-    "The equation for calculating the total CO<sub>2</sub> from paper filings:\n",
+    "## Formulas\n",
+    "* The equation for calculating the total CO<sub>2</sub> from paper filings:\n",
     "\n",
     "\\begin{equation}\n",
     "paperCO_2 =  (number\\ of\\ returns\\ in\\ the\\ year) * (\\%paper\\ filing) * (CO_2\\ per\\ mailed\\ letter) \n",
     "\\end{equation}  \n",
     "\n",
-    "The equation for calculating the total CO<sub>2</sub> from e-filings included the assumption for the different time taken to prepare business and non-business tax returns: \n",
+    "* The equation(s) for calculating the total CO<sub>2</sub> from e-filings included the assumption for the different time taken to prepare business and non-business tax returns: \n",
     "\n",
     "\\begin{equation}\n",
     "efile30CO_2 = (number\\ of\\ returns\\ in\\ this\\ year) * (\\%efile\\ filing) * (30\\%) * (9\\ hrs\\ to\\ prepare\\ return) * (laptop\\ watts) * (CO_2\\ conversion)  \n",
