added ids for sections

--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -217,7 +217,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next cell shows a table of the totals. "
+    "The next cell shows a table of the totals.\n",
+    "<div id=\"table\"></div>"
    ]
   },
   {
@@ -311,7 +312,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final cell shows a bar plot of the results. "
+    "The final cell shows a bar plot of the results. \n",
+    "<div id=\"plots\"></div>"
    ]
   },
   {
