added ids for sections

--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "## History \n",
-    "\n",
+    "<div id=\"hist\"></div>\n",
     "#### Facts:\n",
     "The facts below are related to tech, e-filing, and the environment.\n",
     "\n",
