added ids for sections

--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -59,7 +59,7 @@
     "  \n",
     "## Energy\n",
     "\n",
-    "\n",
+    "<div id=\"energy\"></div>\n",
     "#### Assumptions:\n",
     "The information below lays out the assumptions used to build an approximation for how much CO<sub>2</sub> is used to paper file versus efile. \n",
     "* The International Post Corporation reported in their [2016 sustainability report](https://www.ipc.be/en/knowledge-centre/sustainability/sustainability-report) that mailing 1 letter in 2015 required 37.2g of CO<sub>2</sub>. We use this number as the lower bound for the carbon used to paper file taxes.   \n",
@@ -74,6 +74,7 @@
     "\n",
     "\n",
     "## Formulas\n",
+    "<div id=\"formulas\"></div>\n",
     "* The equation for calculating the total CO<sub>2</sub> from paper filings:\n",
     "\n",
     "\\begin{equation}\n",
