--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -144,9 +144,9 @@
    "source": [
     "d = {\n",
     "    \"eFile_CO2\": {year:0 for year in years} \n",
-    "    ,\"eFile_CO2_percentage\": {year:0 for year in years} \n",
+    "    ,\"eFile_percentage\": {year:0 for year in years} \n",
     "    ,\"paperFile_CO2\": {year:0 for year in years}\n",
-    "    ,\"paperFile_CO2_percentage\":{year:0 for year in years}\n",
+    "    ,\"paperFile_percentage\":{year:0 for year in years}\n",
     "    }\n",
     "\n",
     "# iterate through years\n",
@@ -160,9 +160,9 @@
     "    efileCO2_70 = returns_filed[i] * percentage_efiled[i] * 0.30 * 22 * (laptop_watts * watts_CO2_conversion)\n",
     "    e = efileCO2_70 + efileCO2_30\n",
     "    d[\"eFile_CO2\"][year] = e\n",
-    "    d[\"eFile_CO2_percentage\"][year] = (1-percentage_efiled[i])\n",
+    "    d[\"eFile_percentage\"][year] = (1-percentage_efiled[i])\n",
     "    d[\"paperFile_CO2\"][year] = paperCO2\n",
-    "    d[\"paperFile_CO2_percentage\"][year] = percentage_efiled[i]\n",
+    "    d[\"paperFile_percentage\"][year] = percentage_efiled[i]\n",
     "    \n",
     "    print(str(year.year)+\":\", \"eFile_CO2 < paper_CO2 ==\", e<paperCO2)\n",
     "    "
@@ -355,6 +355,68 @@
    "source": [
     "...the end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "e = {}\n",
+    "for item in d:\n",
+    "    for year,value in d[item].items():\n",
+    "        e[item]=e.get(item,{})\n",
+    "        e[item][year.year] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eFile_CO2': {1990: 5019319.816012321,\n",
+      "               2000: 42827777.5653,\n",
+      "               2010: 110031339.7638,\n",
+      "               2016: 151494405.7536,\n",
+      "               2025: 252726973.1273196},\n",
+      " 'eFile_CO2_percentage': {1990: 0.96,\n",
+      "                          2000: 0.7,\n",
+      "                          2010: 0.30000000000000004,\n",
+      "                          2016: 0.09999999999999998,\n",
+      "                          2025: 0.0010000000000000009},\n",
+      " 'paperFile_CO2': {1990: 4061066432.256,\n",
+      "                   2000: 3368885940.0000005,\n",
+      "                   2010: 1589730840.0000005,\n",
+      "                   2016: 567463679.9999999,\n",
+      "                   2025: 8528449.680000007},\n",
+      " 'paperFile_CO2_percentage': {1990: 0.04,\n",
+      "                              2000: 0.3,\n",
+      "                              2010: 0.7,\n",
+      "                              2016: 0.9,\n",
+      "                              2025: 0.999}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pprint(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
