--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -101,7 +101,7 @@
    "metadata": {},
    "source": [
     "### Carbon Calcs\n",
-    "Using the assumptions and formulas, the follow cells calculate the yearly totals."
+    "Using the assumptions and formulas, the following cells calculate the yearly totals."
    ]
   },
   {
