lbs of co2 for paper update

--- a/data_monkey/TaxReturnCO2.ipynb
+++ b/data_monkey/TaxReturnCO2.ipynb
@@ -127,7 +127,7 @@
     "    $$deliveryPaperCO_2 =  (number\\ of\\ returns\\ in\\ the\\ year) * (\\%paper\\ filing) * (CO_2\\ per\\ mailed\\ letter)$$  \n",
     "\n",
     "    production and disposal:  \n",
-    "    $$pdPaperCO_2 =  (number\\ of\\ returns\\ in\\ the\\ year) * (\\%paper\\ filing) * (lbs_CO2\\ per\\ sheet) * (number\\ of\\ sheets) $$   \n",
+    "    $$pdPaperCO_2 =  (number\\ of\\ returns\\ in\\ the\\ year) * (\\%paper\\ filing) * (CO_2\\ per\\ sheet) * (number\\ of\\ sheets) $$   \n",
     "\n",
     "    total:  \n",
     "    $$paperCO_2 =  deliveryPaperCO_2 + pdPaperCO_2$$\n",
